# needto

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
hto/: __about__.py  __main__.py
needto/: __about__.py  __main__.py
needto/src/: ai_client.py  cli.py  config.py  utils.py
tests/: __init__.py
