[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hto"
dynamic = ["version"]
description = 'Ask AI for help you in your terminal.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Danial Keimasi", email = "danialkeimasi@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "groq==0.5.0",
  "simple-term-menu==1.6.4",
  "typer==0.12.3",
  "rich==13.7.1",
]

[project.urls]
Documentation = "https://github.com/danialkeimasi/hto#readme"
Issues = "https://github.com/danialkeimasi/hto/issues"
Source = "https://github.com/danialkeimasi/hto"

[tool.hatch.version]
path = "hto/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:hto tests}"

[tool.coverage.run]
source_pkgs = ["hto", "tests"]
branch = true
parallel = true
omit = [
  "hto/__about__.py",
]

[tool.coverage.paths]
hto = ["hto", "*/hto/hto"]
tests = ["tests", "*/hto/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
