[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "needto"
dynamic = ["version"]
description = 'Ask AI for help you in your terminal.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Danial Keimasi", email = "danialkeimasi@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "groq==0.5.0",
  "simple-term-menu==1.6.4",
  "typer==0.12.3",
  "rich==13.7.1",
]

[project.urls]
Documentation = "https://github.com/danialkeimasi/needto#readme"
Issues = "https://github.com/danialkeimasi/needto/issues"
Source = "https://github.com/danialkeimasi/needto"

[project.scripts]
needto = "needto.__main__:app"

[tool.hatch.version]
path = "needto/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:needto tests}"

[tool.coverage.run]
source_pkgs = ["needto", "tests"]
branch = true
parallel = true
omit = [
  "needto/__about__.py",
]

[tool.coverage.paths]
needto = ["needto", "*/needto/needto"]
tests = ["tests", "*/needto/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
